# dynus_interfaces

./: CMakeLists.txt  package.xml
msg/: CoeffPoly3.msg  ComputationTimes.msg  DynTraj.msg  DynTrajArray.msg  Goal.msg  Mode.msg  PNAdaptation.msg  PWPTraj.msg  QuinticCoeffPoly3.msg  QuinticPWPTraj.msg  SpeedyPath.msg  State.msg  Trajectory.msg  YawOutput.msg
